--- a/blog.html
+++ b/blog.html
@@ -292,10 +292,10 @@
                                 <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"><i class="far fa-calendar-alt text-primary me-2 "></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <a href="blog-4.html">
+                        <a href="essence-of-nepali-architecture.html">
                         <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">The Essence of <span class="text-primary"> Nepali Architecture</span></h4>
                         </a>
-                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-4.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="essence-of-nepali-architecture.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -312,10 +312,10 @@
                                 <span class="ms-3 wow fadeInUp" data-wow-delay="0.7s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <a href="blog-5.html">
+                        <a href="resilience-of-bhaktapur-architecture.html">
                         <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.9s">The Resilience of <span class="text-primary"> Bhaktapur’s Architecture</span></h4>
                         </a>
-                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.9s" href="blog-5.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.9s" href="resilience-of-bhaktapur-architecture.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -332,10 +332,10 @@
                                 <span class="ms-3 wow fadeInUp" data-wow-delay="0.6s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <a href="blog-6.html">
+                        <a href="traditional-newari-houses.html">
                         <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">Traditional Newari Houses: <span class="text-primary"> A Model of Sustainability</span></h4>
                         </a>
-                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-6.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="traditional-newari-houses.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
@@ -352,10 +352,10 @@
                                 <span class="ms-3 wow fadeInUp" data-wow-delay="0.4s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <a href="blog-7.html">
+                        <a href="wooden-carvings.html">
                         <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">The Unique Charm of <span class="text-primary"> Wooden Carvings</span></h4>
                         </a>
-                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="blog-7.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="wooden-carvings.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
