--- a/blog.html
+++ b/blog.html
@@ -372,10 +372,10 @@
                                 <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <a href="blog-8.html">
+                        <a href="pagoda-style-temples.html">
                         <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">Pagoda-Style Temples: <span class="text-primary"> A Glimpse into Spirituality</span></h4>
                         </a>
-                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-8.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="pagoda-style-temples.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
