--- a/blog.html
+++ b/blog.html
@@ -392,10 +392,10 @@
                                 <span class="ms-3 wow fadeInUp" data-wow-delay="0.5s"><i class="far fa-calendar-alt text-primary me-2"></i>10 Sep, 2024</span>
                             </div>
                         </div>
-                        <a href="blog-9.html">
+                        <a href="significance-of-pagoda.html">
                         <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.6s">Symbolism and Spiritual <span class="text-primary"> Significance of pagoda</span></h4>
                         </a>
-                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="blog-9.html">Read More <i class="bi bi-arrow-right"></i></a>
+                        <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.6s" href="significance-of-pagoda.html">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
             </div>
