--- a/resilience-of-bhaktapur-architecture.html
+++ b/resilience-of-bhaktapur-architecture.html
@@ -29,7 +29,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:site_name"
-      content="The Resilience of Bhaktapur’s Architecture | YS Builders Construction Company Blog"
+      content="YS Builders Construction Company"
     />
     <meta property="og:type" content="website" />
     <meta
