--- a/traditional-newari-houses.html
+++ b/traditional-newari-houses.html
@@ -27,7 +27,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:site_name"
-      content="YS Builders Construction Company -  The Essence of Nepali Architecture"
+      content="YS Builders Construction Company"
     />
     <meta property="og:type" content="website" />
     <meta
