--- a/wooden-carvings.html
+++ b/wooden-carvings.html
@@ -20,7 +20,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:site_name"
-      content="The Unique Charm of Wooden Carvings in Nepali Architecture | YS Builders Construction Company"
+      content="YS Builders Construction Company"
     />
     <meta property="og:type" content="website" />
     <meta
