--- a/blog.html
+++ b/blog.html
@@ -202,7 +202,7 @@
                 </div>
                 <h4 class="text-uppercase mb-3 wow fadeInUp" data-wow-delay="0.4s">
                   <a href="why-ys-builders.html">
-                     Leading construction Company<span style="color: #F8C633;"> in Nepal</span>
+                     Why Y.S. Builders is Leading construction Company<span style="color: #F8C633;"> in Nepal</span>
                   </a>
                 </h4>
                 <a class="text-uppercase fw-bold wow fadeInUp" data-wow-delay="0.4s" href="why-ys-builders.html"
