--- a/why-choose-pillar-construction.html
+++ b/why-choose-pillar-construction.html
@@ -408,6 +408,49 @@
             </p>
           </div>
           <!-- Blog Detail End -->
+          <h4 class="text-uppercase mb-3 text-primary">Related Blogs</h4>
+          <ul>
+            <li>
+              <a href="https://www.ysbuilders.com.np/cost-of-building.html"
+                >Build Wise, Build Strong: Why Choose Pillar Construction in Nepal?</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/cost-of-building.html"
+                >Cost of Building a House in Nepal: Budgeting Guidelines</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/essence-of-nepali-architecture.html"
+                >The Essence of Nepali Architecture</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/resilience-of-bhaktapur-architecture.html"
+                >The Resilience of Bhaktapur’s Architecture</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/traditional-newari-houses.html"
+                >Traditional Newari Houses: A Model of Sustainability</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/wooden-carvings.html"
+                >The Unique Charm of Wooden Carvings in Nepali Architecture</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/pagoda-style-temples.html"
+                >Pagoda-Style Temples: A Glimpse into Spirituality</a
+              >
+            </li>
+            <li>
+              <a href="https://www.ysbuilders.com.np/significance-of-pagoda.html"
+                >Symbolism and Spiritual Significance of pagoda</a
+              >
+            </li>
+          </ul>
         </div>
 
         
