--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
     <meta property="og:locale" content="en_US" />
     <meta
       property="og:site_name"
-      content="YS Builders Construction Company | Portfolio"
+      content="YS Builders Construction Company"
     />
     <meta property="og:type" content="website" />
     <meta
