--- a/contact.html
+++ b/contact.html
@@ -292,7 +292,7 @@
               ></iframe>
             </div>
           </div>
-
+<!--ahello-->
           <!-- <div class="col-md-6 d-flex">
                 <div id="map" class="bg-white"></div>
             </div> -->
