--- a/contact.html
+++ b/contact.html
@@ -429,7 +429,7 @@
       <div class="d-flex flex-column flex-md-row justify-content-between">
         <div class="py-4 px-5 text-center text-md-start">
           <p class="mb-0">
-            &copy; <a class="text-primary" href="#">Y.S. Builders</a>. All
+            &copy; <a class="text-primary" href="#">Y.S. Builders.</a> All
             Rights Reserved.
           </p>
         </div>
