--- a/service.html
+++ b/service.html
@@ -612,7 +612,7 @@
 <div class="container-fluid bg-dark text-white border-top border-primary px-0">
     <div class="d-flex flex-column flex-md-row justify-content-between">
         <div class="py-4 px-5 text-center text-md-start">
-            <p class="mb-0">&copy; <a class="text-primary" href="#">Y.S. Builders</a>. All Rights Reserved.</p>
+            <p class="mb-0">&copy; <a class="text-primary" href="#">Y.S. Builders.</a>All Rights Reserved.</p>
         </div>
         <div class="py-4 px-5 bg-primary footer-shape position-relative text-center text-md-end">
             <p class="mb-0">Designed by Shreepech Internationals Pvt Ltd.</a></p>
