--- a/project.html
+++ b/project.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <title>
-      Y.S. Builders Portfolio: Government & Private Construction Projects in
-      Nepal
+      Y.S. Builders Portfolio: Government & Private Construction Projects in Nepal
     </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
@@ -58,8 +57,7 @@
     />
     <meta name="twitter:label1" content="Written by Sabujan Bikram Shah" />
     <meta name="twitter:data1" content="admin" />
-    <meta name="twitter:label2" content="Time to read" />
-    <meta name="twitter:data2" content="4 minutes" />
+
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
