--- a/converter.html
+++ b/converter.html
@@ -157,7 +157,7 @@
             <a href="service.html" class="nav-item nav-link">Service</a>
             <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
             <a href="blog.html" class="nav-item nav-link">Blogs</a>
-            <a href="convertor.html" class="nav-item nav-link active">Converter</a>
+            <a href="converter.html" class="nav-item nav-link active">Converter</a>
             <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
                         <div class="dropdown-menu m-0">
@@ -182,7 +182,7 @@
         class="display-3 text-uppercase text-white mb-3 wow fadeInUp"
         data-wow-delay="0.2s"
       >
-        About
+        Converter
       </h1>
       <div class="d-inline-flex text-white">
         <h6 class="text-uppercase m-0 wow fadeInLeft" data-wow-delay="0.4s">
@@ -201,7 +201,7 @@
     </div>
     <!-- Page Header Start -->
 
-    <!-- Appointment Start -->
+    <!-- Converter Start -->
     <div class="container-fluid bg-yellow py-6 px-5">
         <div class="row gx-5">
           <div class="col-lg-4 mb-5 mb-lg-0">
@@ -319,7 +319,7 @@
           </div>
         </div>
       </div>
-      <!-- Appointment End -->
+      <!-- Converter End -->
 
 
     
