--- a/converter.html
+++ b/converter.html
@@ -204,40 +204,17 @@
     <!-- Converter Start -->
     <div class="container-fluid bg-yellow py-6 px-5">
         <div class="row gx-5">
-          <div class="col-lg-4 mb-5 mb-lg-0">
-            <div class="mb-4">
-              <h1
+          <h1
                 class="display-5 text-uppercase mb-4 wow fadeInUp"
                 data-wow-delay="0.3s"
               >
-                Get In <span class="text-primary">Touch</span>
+                Area <span class="text-primary"> Converter</span>
               </h1>
-            </div>
-            <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
-              Building your architectural aspirations, incrementally. Whether you
-              are prepared to start on your next significant endeavour or are
-              seeking assistance, we are available to provide guidance. Contact us
-              immediately, and let us collaborate to produce something
-              exceptional.
-            </p>
-            <br />
-            <a
-              class="btn btn-primary py-3 px-5 wow fadeInUp"
-              data-wow-delay="0.8s"
-              href="contact.html"
-              >Contact Us</a
-            >
-          </div>
           <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
             <div class="bg-light text-center p-5">
-              <form action="https://api.web3forms.com/submit" method="POST">
+              <form>
                 <div class="row g-3">
                   <div class="col-12 col-sm-6 wow fadeInLeft">
-                    <input
-                      type="hidden"
-                      name="access_key"
-                      value="ac0fc024-542b-49d8-8815-891454511d69"
-                    />
                     <input
                       type="text"
                       id="name"
