--- a/converter.html
+++ b/converter.html
@@ -205,38 +205,56 @@
     <div class="container-fluid bg-yellow py-6 px-5">
         <div class="row gx-5">
           <h1
-                class="display-5 text-uppercase mb-4 wow fadeInUp"
+                class="display-5 text-uppercase mb-4 wow fadeInUp text-center"
                 data-wow-delay="0.3s"
               >
                 Area <span class="text-primary"> Converter</span>
               </h1>
-          <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.3s">
             <div class="bg-light text-center p-5">
               <form>
                 <div class="row g-3">
-                  <div class="col-12 col-sm-6 wow fadeInLeft">
+                  <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
                       type="text"
                       id="name"
                       class="form-control border-0"
-                      placeholder="Your Name"
+                      placeholder="Ropani"
                       name="Name"
                       style="height: 55px"
-                      required
                     />
                   </div>
-                  <div class="col-12 col-sm-6 wow fadeInLeft">
+                  <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
                       type="email"
                       id="email"
                       class="form-control border-0"
-                      placeholder="Your Email"
+                      placeholder="Aana"
                       style="height: 55px"
                       name="Email Address"
-                      required
                     />
                   </div>
-                  <div class="col-12 col-sm-6 wow fadeInLeft">
+                  <div class="col-12 col-sm-3 wow fadeInLeft">
+                    <input
+                      type="email"
+                      id="email"
+                      class="form-control border-0"
+                      placeholder="Paisa"
+                      style="height: 55px"
+                      name="Email Address"
+                    />
+                  </div>
+                  <div class="col-12 col-sm-3 wow fadeInLeft">
+                    <input
+                      type="email"
+                      id="email"
+                      class="form-control border-0"
+                      placeholder="Daam"
+                      style="height: 55px"
+                      name="Email Address"
+                    />
+                  </div>
+                  <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
                       type="text"
                       id="subject"
@@ -247,48 +265,50 @@
                       required
                     />
                   </div>
-                  <div class="col-12 col-sm-6 wow fadeInLeft">
+                  <div class="col-12 col-sm-4 wow fadeInLeft">
                     <input
                       type="number"
                       id="contact-number"
                       class="form-control border-0"
-                      placeholder="Your Phone Number"
+                      placeholder="Bigha"
                       style="height: 55px"
                       name="Phone Number"
-                      required
                     />
                   </div>
   
-                  <div class="col-12 col-sm-6 wow fadeInLeft">
-                    <textarea
+                  <div class="col-12 col-sm-4 wow fadeInLeft">
+                    <input
                       class="form-control border-0"
-                      rows="5"
-                      id="message"
-                      placeholder="Message"
-                      name="Message"
-                      required
-                    ></textarea>
+                      type="number"
+                      id="contact-number"
+                      placeholder="Katha"
+                      style="height: 55px"
+                      name="Phone Number"
+                     
+                    />
                   </div>
-                  <input
-                    type="hidden"
-                    name="redirect"
-                    value="https://www.ysbuilders.com.np/thanks.html"
-                  />
-                  <div class="h-captcha" data-captcha="true"></div>
-                  <input
-                    type="checkbox"
-                    name="botcheck"
-                    class="hidden"
-                    style="display: none"
-                  />
-                  <div class="col-12">
-                    <button
-                      class="btn btn-primary w-100 py-3 wow fadeInUp"
-                      data-wow-delay="0.9s"
-                      type="submit"
-                    >
-                      Submit Form
-                    </button>
+
+                  <div class="col-12 col-sm-4 wow fadeInLeft">
+                    <input
+                      type="number"
+                      id="contact-number"
+                      class="form-control border-0"
+                      placeholder="Square Feet"
+                      style="height: 55px"
+                      name="Phone Number"
+                    />
+                  </div>
+  
+                  <div class="col-12 col-sm-4 wow fadeInLeft">
+                    <input
+                      class="form-control border-0"
+                      type="number"
+                      id="contact-number"
+                      placeholder="Square Meter"
+                      style="height: 55px"
+                      name="Phone Number"
+                     
+                    />
                   </div>
                 </div>
               </form>
