--- a/converter.html
+++ b/converter.html
@@ -216,7 +216,7 @@
                 <div class="row g-3">
                   <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
-                      type="text"
+                      type="number"
                       id="name"
                       class="form-control border-0"
                       placeholder="Ropani"
@@ -226,7 +226,7 @@
                   </div>
                   <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
-                      type="email"
+                      type="number"
                       id="email"
                       class="form-control border-0"
                       placeholder="Aana"
@@ -236,7 +236,7 @@
                   </div>
                   <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
-                      type="email"
+                      type="number"
                       id="email"
                       class="form-control border-0"
                       placeholder="Paisa"
@@ -246,7 +246,7 @@
                   </div>
                   <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
-                      type="email"
+                      type="number"
                       id="email"
                       class="form-control border-0"
                       placeholder="Daam"
@@ -256,7 +256,7 @@
                   </div>
                   <div class="col-12 col-sm-3 wow fadeInLeft">
                     <input
-                      type="text"
+                      type="number"
                       id="subject"
                       class="form-control border-0"
                       placeholder="Subject"
@@ -307,7 +307,6 @@
                       placeholder="Square Meter"
                       style="height: 55px"
                       name="Phone Number"
-                     
                     />
                   </div>
                 </div>
