--- a/converter.html
+++ b/converter.html
@@ -290,8 +290,8 @@
 
                   <div class="col-12 col-sm-4 wow fadeInLeft">
                     <input
+                      id="sqY" step="0.01"
                       type="number"
-                      id="contact-number"
                       class="form-control border-0"
                       placeholder="Square Feet"
                       style="height: 55px"
