--- a/about.html
+++ b/about.html
@@ -240,7 +240,7 @@
         <div
           class="col-lg-5 pb-5 wow fadeInUp"
           data-wow-delay="0.7s"
-          style="min-height: 360px; min-width: 410px"
+          style="min-height: 300px; min-width: 330px;"
         >
           <div class="position-relative h-100 ms-5">
             <img
