--- a/nepaliUnitConverter.html
+++ b/nepaliUnitConverter.html
@@ -88,16 +88,53 @@
 	</head>
 	
 	<body>
-		<div class="navbar navbar-inverse navbar-static-top">
-			<div class="container">
-				<a href="angular.html" class="navbar-brand">Nepali Unit Converter</a>
-				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Info</a></li>
-				</ul>
-			</div>
-		</div>
-		<div class="container">
+		 <!-- Navbar Start -->
+		 <div class="container-fluid sticky-top bg-white shadow-sm px-5 pe-lg-0">
+			<nav class="navbar navbar-expand-lg navbar-dark py-3 py-lg-0">
+			  <a href="index.html" class="navbar-brand">
+				<h1 class="m-0 display-4">
+				  <img
+					style="height: 80px"
+					src="img/ysbuilders-logo.jpg"
+					alt="Y.S. Builders Logo"
+				  />
+				</h1>
+				<!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
+			  </a>
+			  <button
+				class="navbar-toggler bg-primary"
+				type="button"
+				data-bs-toggle="collapse"
+				data-bs-target="#navbarCollapse"
+			  >
+				<span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarCollapse">
+				<div class="navbar-nav ms-auto py-0">
+				  <a href="index.html" class="nav-item nav-link">Home</a>
+				  <a href="about.html" class="nav-item nav-link">About</a>
+				  <a href="service.html" class="nav-item nav-link">Service</a>
+				  <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
+				  <a href="blog.html" class="nav-item nav-link">Blogs</a>
+				  <a href="converter.html" class="nav-item nav-link active">Converter</a>
+				  <!-- <div class="nav-item dropdown">
+							  <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
+							  <div class="dropdown-menu m-0">
+								  <a href="blog.html" class="dropdown-item">Blog</a>
+								  <a href="detail.html" class="dropdown-item">Blog Detail</a>
+							  </div>
+						  </div> -->
+				  <a
+					href="contact.html"
+					class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
+					>Contact Us <i class="bi bi-arrow-right"></i
+				  ></a>
+				</div>
+			  </div>
+			</nav>
+		  </div>
+		  <!-- Navbar End -->
+		<div class="container-fluid  px-5 pe-lg-2">
 		<div class="row">
 			<div class="col-md-8">
 				<h3>1. Land unit converter</h3>
