--- a/nepaliUnitConverter.html
+++ b/nepaliUnitConverter.html
@@ -137,7 +137,7 @@
 		<div class="container-fluid  px-5 pe-lg-2">
 		<div class="row">
 			<div class="col-md-8">
-				<h3>1. Land unit converter</h3>
+				<h3>Land unit converter</h3>
 			</div>
 			<div class="col-md-4">
 				<label>Value after decimal</label>
@@ -150,7 +150,7 @@
 		
 		<div class="row">
 			<div class="col-md-8">
-				<h3>2.BSToAD-ADToBS converter</h3>
+				<h3>BSToAD-ADToBS converter</h3>
 			</div>
 		</div>
 		
