--- a/project.html
+++ b/project.html
@@ -167,6 +167,7 @@
               >Our Portfolio</a
             >
             <a href="blog.html" class="nav-item nav-link">Blogs</a>
+            <a href="nepaliUnitConverter.html" class="nav-item nav-link">Converter</a>
             <!-- <div class="nav-item dropdown">
               <a
                 href="#"
