--- a/thanks.html
+++ b/thanks.html
@@ -91,6 +91,7 @@
                     <a href="service.html" class="nav-item nav-link">Service</a>
                     <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
                     <a href="blog.html" class="nav-item nav-link">Blogs</a>
+                    <a href="nepaliUnitConverter.html" class="nav-item nav-link">Converter</a>
                     <!-- <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
                         <div class="dropdown-menu m-0">
