--- a/service.html
+++ b/service.html
@@ -317,7 +317,111 @@
 
     </div>
     <!-- Partnership End -->
-    
+     <!-- Appointment Start -->
+   <div class="container-fluid bg-yellow py-6 px-5">
+    <div class="row gx-5">
+      <div class="col-lg-4 mb-5 mb-lg-0">
+        <div class="mb-4">
+          <h1 class="display-5 text-uppercase mb-4 wow fadeInUp" data-wow-delay="0.3s">
+            Get In <span class="text-primary">Touch</span>
+          </h1>
+        </div>
+        <p class="fs-5 mb-0 wow fadeInUp" data-wow-delay="0.5s">
+          Building your architectural aspirations, incrementally. Whether you
+          are prepared to start on your next significant endeavour or are
+          seeking assistance, we are available to provide guidance. Contact us
+          immediately, and let us collaborate to produce something
+          exceptional.
+        </p>
+        <br />
+        <a class="btn btn-primary py-3 px-5 wow fadeInUp" data-wow-delay="0.8s" href="contact.html"
+          >Contact Us</a
+        >
+      </div>
+      <div class="col-lg-8 wow fadeInUp" data-wow-delay="0.3s">
+        <div class="bg-light text-center p-5">
+          <form action="https://api.web3forms.com/submit"
+          method="POST">
+            <div class="row g-3">
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
+                <input
+                    type="hidden"
+                    name="access_key"
+                    value="ac0fc024-542b-49d8-8815-891454511d69"
+                  />
+                <input
+                  type="text"
+                  id="name"
+                  class="form-control border-0"
+                  placeholder="Your Name"
+                  name="Name"
+                  style="height: 55px" required
+                />
+              </div>
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
+                <input
+                  type="email"
+                  id="email"
+                  class="form-control border-0"
+                  placeholder="Your Email"
+                  style="height: 55px"
+                  name="Email Address" required
+                />
+              </div>
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
+                <input
+                  type="text"
+                  id="subject"
+                  class="form-control border-0"
+                  placeholder="Subject"
+                  style="height: 55px"
+                  name="Subject" required
+                />
+              </div>
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
+                <input
+                  type="number"
+                  id="contact-number"
+                  class="form-control border-0"
+                  placeholder="Your Phone Number"
+                  style="height: 55px"
+                  name="Phone Number" required
+                />
+              </div>
+
+              <div class="col-12 col-sm-6 wow fadeInLeft"> 
+                <textarea
+                  class="form-control border-0"
+                  rows="5"
+                  id="message"
+                  placeholder="Message"
+                  name="Message" required
+                ></textarea>
+              </div>
+              <input
+                type="hidden"
+                name="redirect"
+                value="https://www.ysbuilders.com.np/thanks.html"
+              />
+              <div class="h-captcha" data-captcha="true"></div>
+              <input
+                type="checkbox"
+                name="botcheck"
+                class="hidden"
+                style="display: none"
+              />
+              <div class="col-12">
+                <button class="btn btn-primary w-100 py-3 wow fadeInUp" data-wow-delay="0.9s" type="submit">
+                  Submit Form
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- Appointment End -->
 
 
       
