--- a/yogesh.html
+++ b/yogesh.html
@@ -23,7 +23,6 @@
         text-align: center;
         transition: transform 0.6s ease-in-out;
         transform-style: preserve-3d;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
       }
 
       .flip-card:hover .flip-card-inner {
@@ -39,13 +38,11 @@
       }
 
       .flip-card-front {
-        background-color: #bbb;
-        color: black;
+        background-color: transparent;
       }
 
       .flip-card-back {
-        background-color: #2980b9;
-        color: white;
+        background-color: transparent;
         transform: rotateY(180deg);
       }
 
@@ -69,6 +66,11 @@
           width: 100%; /* Full width on mobile */
           height: 300px; /* Adjust height for mobile */
           margin: 1rem auto;
+        }
+        .flip-card img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain; /* Use 'contain' to ensure the whole image fits */
         }
       }
     </style>
