--- a/johan.html
+++ b/johan.html
@@ -70,6 +70,11 @@
           height: 300px; /* Adjust height for mobile */
           margin: 1rem auto;
         }
+        .flip-card img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain; /* Use 'contain' to ensure the whole image fits */
+        }
       }
     </style>
   </head>
