--- a/nepaliUnitConverter.html
+++ b/nepaliUnitConverter.html
@@ -2,7 +2,9 @@
 <html ng-app="app">
   <head>
     <meta charset="utf-8" />
-    <title>Nepali Land Unit Converter | Y.S. Builders Construction Company</title>
+    <title>
+      Nepali Land Unit Converter | Y.S. Builders Construction Company
+    </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="Land Unit Converter, Area Converter, Ropani System, Aana, Paisa, Daam, Bigha System, Bigha, Kattha, Dhur,Square Feet, Sq. Feet, Square Meter, Sq. Meter"
@@ -13,7 +15,10 @@
 		  services for both government and private sector projects.We are well-positioned to meet the construction needs of the western and central regions of Nepal."
       name="description"
     />
-    <link rel="canonical" href="https://www.ysbuilders.com.np/nepaliUnitConverter.html" />
+    <link
+      rel="canonical"
+      href="https://www.ysbuilders.com.np/nepaliUnitConverter.html"
+    />
     <meta property="og:locale" content="en_US" />
     <meta property="og:site_name" content="YS Builders Construction Company" />
     <meta property="og:type" content="website" />
@@ -119,7 +124,9 @@
             <a href="service.html" class="nav-item nav-link">Service</a>
             <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
             <a href="blog.html" class="nav-item nav-link">Blogs</a>
-            <a href="nepaliUnitConverter.html" class="nav-item nav-link active">Converter</a>
+            <a href="nepaliUnitConverter.html" class="nav-item nav-link active"
+              >Converter</a
+            >
             <!-- <div class="nav-item dropdown">
 							  <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
 							  <div class="dropdown-menu m-0">
@@ -140,19 +147,20 @@
 
     <div class="container-fluid container-fluid bg-light py-4 px-5">
       <div class="row gx-5">
-        <div class="col-md-8 ">
+        <div class="col-md-8">
           <h3
-          class="display-6 text-uppercase mb-4 wow fadeInUp"
-          data-wow-delay="0.3s"
-        >
-          Land Area <span class="text-primary"> unit converter</span></h3>
+            class="display-6 text-uppercase mb-4 wow fadeInUp"
+            data-wow-delay="0.3s"
+          >
+            Land Area <span class="text-primary"> unit converter</span>
+          </h3>
         </div>
         <div class="col-md-4 text-primary">
           <label>Value after decimal</label>
           <select
             data-ng-model="noAfterDecimal"
             data-ng-options="d for d in noDecimal "
-            class="form-control bg-primary text-white input-xsmall "
+            class="form-control bg-primary text-white input-xsmall"
           ></select>
         </div>
       </div>
@@ -162,9 +170,11 @@
       <div class="row">
         <div class="col-md-8">
           <h3
-          class="display-6 text-uppercase mb-4 wow fadeInUp"
-          data-wow-delay="0.3s"
-        >Date <span class="text-primary">Converter</span></h3>
+            class="display-6 text-uppercase mb-4 wow fadeInUp"
+            data-wow-delay="0.3s"
+          >
+            Date <span class="text-primary">Converter</span>
+          </h3>
         </div>
       </div>
 
@@ -329,3 +339,19 @@
   type="text/javascript"
   src="Scripts/App/Directives/date-converter.js"
 ></script>
+
+ <!-- JavaScript Libraries -->
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+ <script src="lib/easing/easing.min.js"></script>
+ <script src="lib/wow/wow.min.js"></script>
+ <script src="lib/waypoints/waypoints.min.js"></script>
+ <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+ <script src="lib/tempusdominus/js/moment.min.js"></script>
+ <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+ <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+ <script src="lib/isotope/isotope.pkgd.min.js"></script>
+ <script src="lib/lightbox/js/lightbox.min.js"></script>
+
+ <!-- Template Javascript -->
+ <script src="js/main.js"></script>
