--- a/nepaliUnitConverter.html
+++ b/nepaliUnitConverter.html
@@ -96,6 +96,46 @@
   </head>
 
   <body>
+     <!-- Topbar Start -->
+     <div class="container-fluid px-5 d-none bg-light d-lg-block">
+      <div class="row gx-5">
+        <div class="col-lg-4 text-center py-3">
+          <div class="d-inline-flex align-items-center">
+            <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
+            <a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">
+              <div class="text-start">
+                <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
+                <span>Kupondole, Lalitpur, Nepal</span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 text-center border-start border-end py-3">
+          <div class="d-inline-flex align-items-center">
+            <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
+            <div class="text-start">
+              <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
+
+              <span
+                ><a href="mailto:ysbuilders075@gmail.com"
+                  >ysbuilders075@gmail.com</a
+                ></span
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 text-center py-3">
+          <div class="d-inline-flex align-items-center">
+            <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
+            <div class="text-start">
+              <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
+              <span><a href="tel://+9779860915451"> +977 9860915451</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Topbar End -->
     <!-- Navbar Start -->
     <div class="container-fluid sticky-top bg-white shadow-sm px-5 pe-lg-0">
       <nav class="navbar navbar-expand-lg navbar-dark py-3 py-lg-0">
@@ -340,18 +380,24 @@
   src="Scripts/App/Directives/date-converter.js"
 ></script>
 
- <!-- JavaScript Libraries -->
- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
- <script src="lib/easing/easing.min.js"></script>
- <script src="lib/wow/wow.min.js"></script>
- <script src="lib/waypoints/waypoints.min.js"></script>
- <script src="lib/owlcarousel/owl.carousel.min.js"></script>
- <script src="lib/tempusdominus/js/moment.min.js"></script>
- <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
- <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
- <script src="lib/isotope/isotope.pkgd.min.js"></script>
- <script src="lib/lightbox/js/lightbox.min.js"></script>
+<!-- Back to Top -->
+<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
+><i class="bi bi-arrow-up"></i
+></a>
 
- <!-- Template Javascript -->
- <script src="js/main.js"></script>
+<!-- JavaScript Libraries -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/tempusdominus/js/moment.min.js"></script>
+<script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="lib/isotope/isotope.pkgd.min.js"></script>
+<script src="lib/lightbox/js/lightbox.min.js"></script>
+
+<!-- Template Javascript -->
+<script src="js/main.js"></script>
+
