--- a/index.html
+++ b/index.html
@@ -73,7 +73,98 @@
   <body>
     
 
-   
+    <!-- Topbar Start -->
+    <div class="container-fluid px-5 d-none bg-light d-lg-block">
+      <div class="row gx-5">
+        <div class="col-lg-4 text-center py-3">
+          <div class="d-inline-flex align-items-center">
+            <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
+            <a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">
+              <div class="text-start">
+                <p class="text-uppercase text-primary fw-bold">Our Office</p>
+                <span>Kupondole, Lalitpur, Nepal</span>
+              </div>
+            </a>
+          </div>
+        </div>
+        <div class="col-lg-4 text-center border-start border-end py-3">
+          <div class="d-inline-flex align-items-center">
+            <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
+            <div class="text-start">
+              <p class="text-uppercase text-primary fw-bold">Email Us</p>
+
+              <span
+                ><a href="mailto:ysbuilders075@gmail.com"
+                  >ysbuilders075@gmail.com</a
+                ></span
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 text-center py-3">
+          <div class="d-inline-flex align-items-center">
+            <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
+            <div class="text-start">
+              <p class="text-uppercase text-primary fw-bold">Call Us</p>
+              <span><a href="tel://+9779860915451"> +977 9860915451</a></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Topbar End -->
+
+    <!-- Navbar Start -->
+    <div class="container-fluid sticky-top bg-white shadow-sm px-5 pe-lg-0">
+      <nav class="navbar navbar-expand-lg navbar-dark py-3 py-lg-0">
+        <a href="index.html" class="navbar-brand">
+          <h1 class="m-0 display-4">
+            <img
+              style="height: 80px"
+              src="img/ysbuilders-logo.jpg"
+              alt="Y.S. Builders Construction Company Logo"
+            />
+          </h1>
+          <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
+        </a>
+        <button
+          class="navbar-toggler bg-primary"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav ms-auto py-0">
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href="service.html" class="nav-item nav-link">Service</a>
+            <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
+            <a href="blog.html" class="nav-item nav-link">Blogs</a>
+            <a href="nepaliUnitConverter.html" class="nav-item nav-link">Converter</a>
+            <!-- <div class="nav-item dropdown">
+              <a
+                href="#"
+                class="nav-link dropdown-toggle"
+                data-bs-toggle="dropdown"
+                >Blogs</a
+              >
+              <div class="dropdown-menu m-0">
+                <a href="blog.html" class="dropdown-item">Blog</a>
+                <a href="detail.html" class="dropdown-item">Blog Detail</a>
+              </div>
+            </div> -->
+            <a
+              href="contact.html"
+              class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block"
+              >Contact Us <i class="bi bi-arrow-right"></i
+            ></a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <!-- Navbar End -->
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0">
