--- a/about.html
+++ b/about.html
@@ -303,9 +303,9 @@
 
     <!-- Team Start -->
     <div class="container-fluid bg-white py-4 px-5">
-      <div class="text-center mx-auto mb-4">
+      <div class="text-center mb-4">
         <div class="row px-2 gx-5">
-          <div class="col-md-3 text-center pt-4 px-5 mx-auto d-block">
+          <div class="col-md-4 text-center pt-4 px-5 mx-auto d-block">
             <div class="position-relative wow fadeInUp" data-wow-delay="0.3s">
               <img
                 class="img-fluid about-img w-100"
@@ -340,7 +340,7 @@
             >
               Our <span class="text-primary">Core</span> Team
             </h2>
-            <div class="col-md-3 text-center pt-4 px-5 mx-auto d-block">
+            <div class="col-md-4 text-center pt-4 px-5 mx-auto d-block">
               <div class="position-relative wow fadeInUp" data-wow-delay="0.3s">
                 <img
                   class="img-fluid about-img w-100"
@@ -357,7 +357,7 @@
                 >
                   <span class="text-primary"> Sabujan Bikram Shah</span>
                 </h3>
-                <h5 class="text-body wow fadeInUp" data-wow-delay="0.7s">
+                <h5 class="text-body wow fadeInUp" data-wow-delay="0.6s">
                   C.E.O
                 </h5>
               </div>
@@ -366,7 +366,7 @@
         </div>
       </div>
       <div class="row px-2 gx-5">
-        <div class="col-md-3 text-center pt-4 px-5 ms-auto">
+        <div class="col-md-4 text-center pt-4 px-5 ms-auto">
           <div class="position-relative wow fadeInUp" data-wow-delay="0.3s">
             <img
               class="img-fluid about-img w-100"
@@ -379,14 +379,14 @@
           <div>
             <h3
               class="display-7 text-uppercase mb-2 wow fadeInUp"
-              data-wow-delay="0.6s"
+              data-wow-delay="0.5s"
             >
               <span class="text-primary">Sangita Shah</span>
             </h3>
-            <h5 class="text-body wow fadeInUp" data-wow-delay="0.8s">M.D</h5>
+            <h5 class="text-body wow fadeInUp" data-wow-delay="0.5s">M.D</h5>
           </div>
         </div>
-        <div class="col-md-3 text-center pt-4 px-5 me-auto">
+        <div class="col-md-4 text-center pt-4 px-5 me-auto">
           <div class="position-relative wow fadeInUp" data-wow-delay="0.5s">
             <img
               class="img-fluid about-img w-100"
@@ -399,11 +399,11 @@
           <div>
             <h3
               class="display-7 text-uppercase mb-2 wow fadeInUp"
-              data-wow-delay="0.8s"
+              data-wow-delay="0.5s"
             >
               <span class="text-primary">Yogesh Bikram Shah</span>
             </h3>
-            <h5 class="text-body wow fadeInUp" data-wow-delay="0.9s">M.D</h5>
+            <h5 class="text-body wow fadeInUp" data-wow-delay="0.5s">M.D</h5>
           </div>
         </div>
       </div>
