--- a/nepaliUnitConverter.html
+++ b/nepaliUnitConverter.html
@@ -96,8 +96,8 @@
   </head>
 
   <body>
-     <!-- Topbar Start -->
-     <div class="container-fluid px-5 d-none bg-light d-lg-block">
+    <!-- Topbar Start -->
+    <div class="container-fluid px-5 d-none bg-light d-lg-block">
       <div class="row gx-5">
         <div class="col-lg-4 text-center py-3">
           <div class="d-inline-flex align-items-center">
@@ -185,7 +185,7 @@
     </div>
     <!-- Navbar End -->
 
-    <div class="container-fluid container-fluid bg-light py-4 px-5">
+    <div class="container-fluid container-fluid bg-yellow py-6 px-5">
       <div class="row gx-5">
         <div class="col-md-8">
           <h3
@@ -206,8 +206,9 @@
       </div>
 
       <div land-converter></div>
-
-      <div class="row">
+    </div>
+    <div class="container-fluid container-fluid bg-light py-6 px-5">
+      <div class="row gx-5">
         <div class="col-md-8">
           <h3
             class="display-6 text-uppercase mb-4 wow fadeInUp"
@@ -219,9 +220,9 @@
       </div>
 
       <div date-converter></div>
-
-      <br />
     </div>
+
+    <br />
 
     <!-- Location Start -->
     <div class="container-fluid bg-white overflow-hidden py-1 px-lg-0">
@@ -382,7 +383,7 @@
 
 <!-- Back to Top -->
 <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"
-><i class="bi bi-arrow-up"></i
+  ><i class="bi bi-arrow-up"></i
 ></a>
 
 <!-- JavaScript Libraries -->
@@ -400,4 +401,3 @@
 
 <!-- Template Javascript -->
 <script src="js/main.js"></script>
-
