--- a/johan.html
+++ b/johan.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <title>Shreepech Internationals - Business Card</title>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <link href="img/shreepch/logo.jpeg" rel="icon" />
     <style>
       body {
         background-color: #1a2e3b;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        margin: 0;
       }
 
       .flip-card {
@@ -20,12 +28,18 @@
         width: 100%;
         height: 100%;
         text-align: center;
-        transition: transform 0.6s ease-in-out;
         transform-style: preserve-3d;
+        animation: rotate360 5s linear infinite;
       }
 
-      .flip-card:hover .flip-card-inner {
-        transform: rotateY(180deg);
+      /* Keyframes for 360-degree rotation */
+      @keyframes rotate360 {
+        from {
+          transform: rotateY(0deg);
+        }
+        to {
+          transform: rotateY(360deg);
+        }
       }
 
       .flip-card-front,
@@ -37,13 +51,11 @@
       }
 
       .flip-card-front {
-        
-        color: black;
+        background-color: transparent;
       }
 
       .flip-card-back {
-
-        color: white;
+        background-color: transparent;
         transform: rotateY(180deg);
       }
 
@@ -51,27 +63,36 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
+        border-radius: 10px; /* Rounded edges for a softer look */
       }
 
       /* Responsive Styles */
       @media (max-width: 768px) {
         .flip-card {
-          width: 80%; /* Adjust width for tablets */
+          width: 90%; /* Adjust width for tablets */
           height: 400px; /* Adjust height for tablets */
-          margin: 2rem auto;
+          margin: 1rem auto;
         }
       }
-
-      @media (max-width: 576px) {
+      /* Mid-sized Devices between 576px and 768px */
+      
+      @media (min-width: 576px) and  (max-width: 768px){
         .flip-card {
-          width: 80%; /* Full width on mobile */
+          width: 500px; /* Full width on mobile */
           height: 300px; /* Adjust height for mobile */
           margin: 1rem auto;
+        }
+      }
+      @media (max-width: 576px) {
+        .flip-card {
+          width: 490px; /* Full width on mobile */
+          height: 300px; /* Adjust height for mobile */
+          margin: 0rem auto;
         }
         .flip-card img {
           width: 100%;
           height: 100%;
-          object-fit: contain; /* Use 'contain' to ensure the whole image fits */
+          object-fit: cover;
         }
       }
     </style>
@@ -84,10 +105,10 @@
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
-            <img src="img/shreepch/shreepech-front.png" alt="Front" />
+            <img src="img/shreepch/shreepech-front.png" alt="Front of Shreepech business card" />
           </div>
           <div class="flip-card-back">
-            <img src="img/shreepch/shreepech-back-johan.png" alt="Back" />
+            <img src="img/shreepch/shreepech-back-johan.png" alt="Back of Shreepech business card" />
           </div>
         </div>
       </div>
