change in ys-bc-1

--- a/businesscard.html
+++ b/businesscard.html
@@ -56,10 +56,10 @@
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon" />
-    
+
     <style>
       body {
-        background-color: #fff7d1;
+        background-color: #FFF5E4;
         display: flex;
         justify-content: center;
         align-items: center;
