change in ys-bc-2

--- a/businesscard.html
+++ b/businesscard.html
@@ -59,7 +59,7 @@
 
     <style>
       body {
-        background-color: #FFF5E4;
+        background-color: #fffbbb;
         display: flex;
         justify-content: center;
         align-items: center;
