change in ys-bc-shawdow

--- a/businesscard.html
+++ b/businesscard.html
@@ -81,7 +81,8 @@
         height: 100%;
         text-align: center;
         transform-style: preserve-3d;
-        animation: rotate360 5s linear infinite;
+        animation: rotate360 7s linear infinite;
+        box-shadow: 2px 60px 40px #171601; /* Adds shadow specifically to the rotating card */
       }
 
       /* Keyframes for 360-degree rotation */
