change in ys-bc-shawdow-1

--- a/businesscard.html
+++ b/businesscard.html
@@ -82,7 +82,7 @@
         text-align: center;
         transform-style: preserve-3d;
         animation: rotate360 7s linear infinite;
-        box-shadow: 2px 60px 40px #171601; /* Adds shadow specifically to the rotating card */
+        box-shadow: 2px 60px 40px #171601; 
       }
 
       /* Keyframes for 360-degree rotation */
