--- a/yogesh.html
+++ b/yogesh.html
@@ -29,7 +29,8 @@
         height: 100%;
         text-align: center;
         transform-style: preserve-3d;
-        animation: rotate360 5s linear infinite;
+        animation: rotate360 7s linear infinite;
+        box-shadow: 2px 40px 40px #171601;
       }
 
       /* Keyframes for 360-degree rotation */
